[package]
name = "anthropic-lb"
version = "0.1.0"
edition = "2021"
description = "Local load-balancing reverse proxy for multiple Anthropic Max OAuth accounts"

[dependencies]
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
bytes = "1"
http-body-util = "0.1"
